css/snake_style.css
*{
    box-sizing: border-box;
    font-family: 'Silkscreen',sans-serif;
}
body{
    margin: 0;
    padding: 0;
    background-color: #1d0045;
}

.heading{
    text-align: center;
    color: #ffffff;
    padding: 2vh 0;
    font-size: 4.5vw;
}
.console{
    position: relative;
    margin: 0 auto;
    background-image: url("/img/grass.jpg");
    background-size: cover;
    height: 450px;
    width: 925px;
    padding: 0;
    box-sizing: border-box;
}
#head{
    position: absolute;
    background-image: url("/img/head.png");
    margin: 0;
    height: 25px;
    width: 25px;
    top: 0;
    left: 0;   
}

#food{
    position: absolute;
    background-image: url("/img/food.png");
    margin: 0;
    height: 25px;
    width: 25px;
    top:250px;
    left:100px;
}

p{
    color: white;
}

